platform/keycloak/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak
spec:
  gatewayClassName: cilium
  listeners:
  - name: keycloak
    hostname: auth.seigra.net
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: keycloak
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: keycloak
  hostnames:
  - auth.seigra.net
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: keycloak-service
      port: 8443
      weight: 1
